# ChangeLog for sys-fs/lvm2
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-fs/cvs-repo/gentoo-x86/sys-fs/lvm2/ChangeLog,v 1.156 2009/05/09 23:40:37 robbat2 Exp $

*lvm2-2.02.45-r1 (09 May 2009)

  09 May 2009; Robin H. Johnson <robbat2@gentoo.org>
  +lvm2-2.02.45-r1.ebuild:
  Bug #262833: fix rcscript location. Bug #217644: Try to fix dlopen
  failure.

  09 May 2009; Robin H. Johnson <robbat2@gentoo.org> lvm2-2.02.45.ebuild:
  Bug 268662: Fix more parallel build fun.

  12 Apr 2009; Robin H. Johnson <robbat2@gentoo.org> lvm2-2.02.45.ebuild:
  Bug #265593: Provide better workaround for the symlink parallel make bug.
  Real fix needs upstream to change chunks of the build setup.

  12 Apr 2009; Robin H. Johnson <robbat2@gentoo.org> lvm2-2.01.13.ebuild,
  lvm2-2.02.33.ebuild, lvm2-2.02.33-r1.ebuild, lvm2-2.02.36.ebuild,
  lvm2-2.02.37.ebuild, lvm2-2.02.39.ebuild, lvm2-2.02.42.ebuild,
  lvm2-2.02.45.ebuild:
  Bug #265772: Update SRC_URI to check the /old/ directory upstream for
  files as they are moved.

*lvm2-2.02.45 (09 Apr 2009)

  09 Apr 2009; Caleb Tennis <caleb@gentoo.org>
  +files/device-mapper.conf-1.02.22-r3, +files/device-mapper.rc-1.02.22-r3,
  +files/64-device-mapper.rules-1.02.22-r5,
  +files/lvm2-2.02.45-device-mapper-export-format.patch,
  +files/1.02.22-dmeventd.initd, +files/lvm2-2.02.45-dmeventd.patch,
  +files/lvm.conf-2.02.45.patch, +files/dm-start.sh, +files/dmtab,
  +lvm2-2.02.45.ebuild:
  Version bump per bug #263243

  17 Jan 2009; Robin H. Johnson <robbat2@gentoo.org>
  files/lvm.rc-2.02.28-r2:
  Stop using /lib/librc.so to detect openrc/baselayout2, and use a file
  installed by new openrc instead, fixes bug #253076.

  17 Jan 2009; Robin H. Johnson <robbat2@gentoo.org>
  files/lvm.rc-2.02.28-r2:
  Minor fix for bug #255237.

  14 Nov 2008; Robin H. Johnson <robbat2@gentoo.org> metadata.xml,
  lvm2-2.02.33.ebuild, lvm2-2.02.33-r1.ebuild, lvm2-2.02.36.ebuild,