@@ -1,6 +1,8 @@
 AUX 1.02.22-dmeventd.initd 536 RMD160 2f65a288b735035e6b2451c71ab432a525b19b3a SHA1 5413ad7eaf63a5e7c52f1b21138422f9e4fd6186 SHA256 c9dcee15ce55961e5df7928c350ae1c6db6e78c30d87f7fafa6ba4b016dd9191
 AUX 64-device-mapper.rules-1.02.22-r5 1010 RMD160 3dbb70b60b0c86a77fb9d0e8a0a9cd16a7dd03cc SHA1 fec62b9d4357fe4160e3d017c103767b6c9bf232 SHA256 7c92c2ff3c8dee6588ac51f8367a7b4bcb31d42f2d306ed08ce01be809b9ffcd
+AUX clvmd.confd-2.02.39 213 RMD160 d23f8acd6a844e05a3e0da83939513ef0dfab0d8 SHA1 546bfd48a7cfd7e7ffff07861f90e2b8ee29d436 SHA256 68442d5c9da81bad79fa6b1beaede290f24ea6a4e4415f3d9f4e37ccca6c524a
 AUX clvmd.rc-2.02.28-r3 3367 RMD160 eb09f9ef6d9402c9a22ab145ebb64db5f279adc7 SHA1 f15770f0919402f2fbbc7d8441ef3239e6178d0b SHA256 14c1c738b26869877a2bc74f0f8dd0ae4a764976823443db6f5575556285b519
+AUX clvmd.rc-2.02.39 3678 RMD160 50b5ffbf50486a4ca5640344f72e8814c47878db SHA1 7e9e933212e716869e4ba58880bdc526f577cd9b SHA256 9e5ee139b04fd7a691759b84e4d2986752259a4670f1c2f16acb013bf5713b44
 AUX device-mapper.conf-1.02.22-r3 15 RMD160 1954cbfeea6eeed764a6344039d9c1eb58f7b00a SHA1 0dd47dfb811946a11fbde987e2ce1e105ed7fafb SHA256 57777904f12a35617e5a4193c964ebb32396452487fd02353e71e16e7b46bc22
 AUX device-mapper.rc-1.02.22-r3 618 RMD160 c6d4c405ce381cc4c86c8e838ba25ddb64f4ac75 SHA1 92486f5a6f77b220e3d11589f12c458eaeeda0b1 SHA256 c682cfa6da469eed055bf6e6a88e2d48ecfa12be406cd857965ef08bb1ecdaf8
 AUX dm-start.sh 2114 RMD160 96a6b824e22d5c04f2710f98cda5361bde6a265c SHA1 b18c79802ab8bac9befe4a32cce6fe13beb3134c SHA256 c064c3e2a1d128a6326b539a675f1a6cf88b75f5526222e232d53ea1468a9bcf
@@ -32,6 +34,7 @@ EBUILD lvm2-2.02.37.ebuild 4642 RMD160 3122102c33c454ba0bf85ea9f3fbec21f6f0d64a 
 EBUILD lvm2-2.02.39.ebuild 4705 RMD160 72fc922cd0ee3c17f931e3b34d43e458236e068d SHA1 110e9b07ab048a49b6df3df3a7a4b1612ecc6ec2 SHA256 59548262a0ada34d1917493617b9a667d466eeb3ba84dac83c28a6d14ef89a52
 EBUILD lvm2-2.02.42.ebuild 4705 RMD160 56ef98e954c6b9e2717aedcf771bfe1332f82e0f SHA1 b1502083354d25662dd0b74940fb381a9fdc096a SHA256 e6df77b5f42f98c3c09db16c769b4a95a33847ed906a981be69776f10dbb3913
 EBUILD lvm2-2.02.45-r1.ebuild 5715 RMD160 f48dee13e3ec1935da4ba6456931965f74c56b48 SHA1 ecf3695bdde9d7d9b659cd1a925f0612ef4e030c SHA256 576df8e17db68e68fa31a6c47af4a238ed82773a8ec8c3f31adecda5fadeced1
+EBUILD lvm2-2.02.45-r2.ebuild 5856 RMD160 79ab968c62ca8ef62d29921819742edf406a753e SHA1 165b410d4fd3473f2313d039f999913e81b85533 SHA256 98376ae365d4581f5c25154e0050d704c0b507b7b9fc6ec946c253ac6b04fcd6
 EBUILD lvm2-2.02.45.ebuild 5748 RMD160 44663663c49e906d1fc9b7b6f0adae672d086f4b SHA1 9162aa871d1c7756e5153ba009ab4cbe710388fe SHA256 9f31d6397e44ecec804f0510cd0ade1cf84b0dfb6cadea1988a1155b50156187
-MISC ChangeLog 24814 RMD160 52415a936c13043e0d275486a21f0a6ad984e2c2 SHA1 7378fed7f6fc82cf48ac7fad9367fb5cf2ae873b SHA256 fac945490ee0000f3fe872a7c6e20174b6dcde625486aa71205d7df59f551268
+MISC ChangeLog 25091 RMD160 da580596dd18efea947ee690fa801f61e26908d7 SHA1 2137c7bb6788899b9cd25d018c04a98ac8a7ac69 SHA256 943295ef25b8613baaf36df5ce41a5550cc6f2302332a966654f542e5292e957
 MISC metadata.xml 792 RMD160 f60db9169ee273ca2f97fa5e69d4e5329e988164 SHA1 42f85f30477c65a164a11e172db7e250f442dca5 SHA256 87ced5a3a6102985f7c2a619dd52f65e62ae916f8921c8e7115a25452cd44b7f
