@@ -1,6 +1,14 @@
 # ChangeLog for sys-fs/lvm2
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-fs/cvs-repo/gentoo-x86/sys-fs/lvm2/ChangeLog,v 1.156 2009/05/09 23:40:37 robbat2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-fs/cvs-repo/gentoo-x86/sys-fs/lvm2/ChangeLog,v 1.157 2009/05/19 00:08:34 robbat2 Exp $
+
+*lvm2-2.02.45-r2 (19 May 2009)
+
+  19 May 2009; Robin H. Johnson <robbat2@gentoo.org>
+  +files/clvmd.confd-2.02.39, +files/clvmd.rc-2.02.39,
+  +lvm2-2.02.45-r2.ebuild:
+  Port the latest clvm changes from clvm-2.02.39 per bug 265671, so that the
+  clvm package can finally die.
 
 *lvm2-2.02.45-r1 (09 May 2009)
 
